# agentcore-starter

./: .bedrock_agentcore.yaml  .gitignore  cleanup.sh  deploy_agent.sh  git-setting.sh  main.py  pyproject.toml  setup_infrastructure.sh
src/: agent.py
