[project]
name = "agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "boto3>=1.43.14",
    "fastmcp>=3.3.1",
    "strands-agents>=1.41.0",
    "strands-agents-tools>=0.6.0",
]
